--- a/index.html
+++ b/index.html
@@ -127,12 +127,11 @@
                 </div>
             </div>
             <div class="sign">
-                <span>Returns</span>
-                <span>& Orders</span>
+                <a href="returnandorder.html"><span>Returns</span> <span>& Orders</span></a>
             </div>
             <div class="flex cart">
                 <i class="fas fa-shopping-cart"></i>
-                <span class="ca">Cart</span>
+                <a href="cart.html"><span class="ca">Cart</span></a>
             </div>
         </div>
     </div>
@@ -145,11 +144,11 @@
         </div>
         <div class="second-2">
             <ul>
-                <li>Today's Deal</li>
-                <li>Customer Service</li>
-                <li>Registry</li>
-                <li>Gift Cards</li>
-                <li>Sell</li>
+                <li style="display: inline; margin-right: 10px;"><a href="todaysdeal.html">Today's Deal</a></li>
+                <li style="display: inline; margin-right: 10px;"><a href="customerservice.html">Customer Service</a></li>
+                <li style="display: inline; margin-right: 10px;"><a href="registry.html">Registry</a></li>
+                <li style="display: inline; margin-right: 10px;"><a href="giftcards.html">Gift Cards</a></li>
+                <li style="display: inline;"><a href="sell.html">Sell</a></li>
             </ul>
         </div>
         <div class="second-3">
